--- a/Bio.html
+++ b/Bio.html
@@ -10,9 +10,17 @@
       <h1>Wired</h1>
       <h2>Hard rock for the Digital Age</h2>
       <nav>
-        <a href=index.html>Home</a>
-        <a href=about.html>About</a>
-        <a href=Bio.html>Biography</a>
+        <ul>
+          <li><a href=index.html>Home</a></li>
+          <li><a href=about.html>About</a></li>
+          <li><a href=Bio.html>Biography</a></li>
+          <li><a>Albums</a></li>
+          <li><a>Shows</a>
+              <li><a>UK Tour</a></li>
+              <li><a>US Tour</a></li>
+          </li>
+          <li><a>Contact</a></li>
+        </ul>
       </nav>
     </header>
 
