--- a/Bio.html
+++ b/Bio.html
@@ -11,15 +11,15 @@
       <h2>Hard rock for the Digital Age</h2>
       <nav>
         <ul>
-          <li><a href=index.html>Home</a></li>
+          <li><a href=Home.html>Home</a></li>
           <li><a href=about.html>About</a></li>
           <li><a href=Bio.html>Biography</a></li>
-          <li><a>Albums</a></li>
-          <li><a>Shows</a>
+          <li><a href=albums.html>Albums</a></li>
+          <li><a href=shows.html>Shows</a>
               <li><a>UK Tour</a></li>
               <li><a>US Tour</a></li>
           </li>
-          <li><a>Contact</a></li>
+          <li><a href=contact.html>Contact</a></li>
         </ul>
       </nav>
     </header>
